--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,32 +14,25 @@
 	
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="js/bootstrap.min.js"></script>
-<!-- Previewing image before it gets upload -->
-<script class="jsbin"
-	src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script class="jsbin"
-	src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
 
-<link
-	href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600'
-	rel='stylesheet' type='text/css' />
-<link rel="stylesheet" href="css/index.css" />
+	<link rel="stylesheet" href="css/index.css" />
 
 <script>
 	
   	$(document).ready(function() {
-
   		$('#searchMembers').autocomplete({
-  			serviceUrl: '${pageContext.request.contextPath}/getMembers',
+  			serviceUrl:'/getMembers',
   			paramName: "name",
   			delimiter: ",",
   		    transformResult: function(response) {
   		        return {
   		            suggestions: $.map($.parseJSON(response), function(item) {
-  		                return { value: item.name,data: item.email };
+  		                return { value: item.name+" ,  "
+ 		                	 + item.email,
+ 		                	 data: item.email };
   		                	
   		            })
   		            
@@ -50,7 +43,16 @@
   		});
   		
   	});
-  	
+ /*  	
+  	$(document).ready(function(){
+  	    $('#subButton').attr('disabled',true);
+  	    $('#searchMembers').keyup(function(){
+  	        if($(this).val().length !=0)
+  	        	 $('#subButton').attr('disabled', false);            
+  	        else
+  	        	 $('#subButton'.attr('disabled',true);
+  	    })
+  	}); */
   	</script>
 
 </head>
@@ -213,6 +215,8 @@
       </div>
   		
   	<div class="col-lg-3 col-sm-5 col-md-5 ">
+  	
+  	<!-- <input type="text" name="user" class="form-control" id="searchMembers1" placeholder="Select a newer"/> -->
   	<div class="row">
 	     <div class="panel-body">
               <form class="form-inline" role="form">
@@ -233,12 +237,14 @@
         </div> -->
         <div class="modal-body">
           <img class="userInfoPic pull-left" src="images/myimage.jpg"/>
-          <div class="pull-left">
-                Name :  <label> ${loggedInUser.name}</label><br/>
-                Role &nbsp;: <label> ${loggedInUser.getRole()}</label><br/>
-                Phone No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: <label> ${loggedInUser.getPhone()}</label><br/>
-                Email-ID&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: <label> ${loggedInUser.getEmail()}</label><br/>
-                </div>  
+          <div class="pull-left" style = "padding-left:10px;">
+                                    
+										Name &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: <strong th:text="${session.loggedInUser.name}">name</strong><br />
+										Email-ID&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: <span th:text="${session.loggedInUser.getEmail()}"></span> <br />
+										Role &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: <span th:text="${session.loggedInUser.getRole()}"></span> <br />
+                                    	Phone No.&nbsp;&nbsp;:<span th:text="${session.loggedInUser.getPhone()}"></span> <br /> 
+                                    
+                                 </div>  
           
         </div>
         <div class="modal-footer">
@@ -298,7 +304,7 @@
  		<div class="panel panel-default">
  			<div class="panel-heading" id="badges-heading" style="background: #1ab188;" >
                 <img class="recognizeKarmaIcon" src="images/icon_badge.png"/>
-                &nbsp;&nbsp;&nbsp;&nbsp;<font color="white">Newer's</font>
+                &nbsp;&nbsp;&nbsp;&nbsp;<font color="white">Requests and Suggestions</font>
             </div>
             <div class="panel-body">
             <div class="row">
