--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -78,7 +78,7 @@
             <div class="collapse navbar-collapse pull-right" id="myNav">
                <ul class="nav navbar-nav">
                   <li class="buttons">
-                     <a href="#">
+                     <a href="/home">
                         <i class="fa fa-tachometer fa-lg" aria-hidden="true"></i>
                         <!-- <img src="assets/icon_dashboard_hover.png" class="hover"> -->
                         <b>Home</b>
@@ -100,7 +100,7 @@
                      </a>
                   </li>
                   <li class="buttons">
-                     <a href="#">
+                     <a href="messages">
                         <span class="fa-stack">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
@@ -119,7 +119,7 @@
                            <div class="modal-content">
                               <div class="modal-body">
                                  <h4>Your Profile</h4>
-                                 <img class="userInfoPic pull-left" src="images/myimage.jpg"/>
+                                 <img class="userInfoPic pull-left img-rounded" src="images/myimage.jpg"/>
                                   <div class="pull-left" style = "padding-left:10px;">
                                     
 										Name &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: <strong th:text="${session.loggedInUser.name}">name</strong><br />
@@ -202,7 +202,7 @@
 		              <div  th:each="post:${feed}">
 			            <div class="col-xs-12" >
 			            	<div class="col-xs-2 " style = "text-align: center;">
-			                   <img class="imager wallOfFamePost" src="/images/myimage.jpg"/>
+			                   <img class="imager wallOfFamePost img-rounded" src="/images/myimage.jpg"/>
 			                </div>
 			                <div class="col-xs-10 ">
 						       <strong th:text="${post.writerId}" > </strong> <br/>
@@ -234,7 +234,6 @@
 	       </div>  	
         <div class="modal fade" id="memberModal" role="dialog" data-keyboard="false" data-backdrop="static">
         <div class="modal-dialog">
-    
       <!-- Modal content-->
       <div class="modal-content">
         <!-- <div class="modal-header">
@@ -242,7 +241,7 @@
           <h4 class="modal-title">Modal Header</h4>
         </div> -->
         <div class="modal-body">
-          <img class="userInfoPic pull-left" src="images/myimage.jpg"/>
+          <img class="userInfoPic pull-left img-rounded" src="images/myimage.jpg"/>
           <div class="pull-left" style = "padding-left:10px;">
                                     
 										Name &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: <strong th:text="${session.sUser.name}">name</strong><br />
@@ -282,7 +281,7 @@
 			<div class="panel-body">
 				<div class="col-xs-5">
 					<div class="row">
-						<img class="sideBatchPic" src="images/myimage.jpg"/>
+						<img class="sideBatchPic img-rounded" src="images/myimage.jpg"/>
 					</div>		
 				</div>
 				<div class="col-xs-7">
@@ -320,7 +319,7 @@
             	<div class = "panel-body">
             		<div class="col-xs-5">
 						<div class="row">
-							<img class="sideBatchPic" src="images/myimage.jpg"/>
+							<img class="sideBatchPic img-rounded" src="images/myimage.jpg"/>
 						</div>		
 					</div>
 					<div class="col-xs-7">
@@ -329,14 +328,39 @@
 						</div>
 						<div class="row">
 							<form >
-							<div style="padding-bottom:5px">
-								<a href="#"> <!-- th:href = "@{/acceptRequest/} + ${fReq.id}" --><button type="button" class="btn btn-success btn-sm">Message</button></a>
-							
-        					<a href ="user"><button type="button" class="btn btn-info btn-sm" >View Profile</button></a>
-        					</div>
+								<div style="padding-bottom:5px">
+									<!-- th:href = "@{/acceptRequest/} + ${fReq.id}" inside <a> tag below-->
+									<button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#messageModal">Message</button>
+								
+	        						<a href ="user"><button type="button" class="btn btn-info btn-sm" >View Profile</button></a>
+	        					</div>
         					</form>
+        					
 						</div>
 					</div>
+					<div class="modal fade" id="messageModal" role="dialog" data-keyboard="false" data-backdrop="static">
+       					<div class="modal-dialog">
+    
+     						 <!-- Modal content-->
+      						<div class="modal-content">
+      							<div class="modal-header">
+							        <button type="button" class="close" data-dismiss="modal">&times;</button>
+							        <h4 class="modal-title">Message</h4>
+							    </div>
+							    <form th:action="@{/sendMessage/} + ${frnds.id}" method="post">
+	        						<div class="modal-body">
+	          							<strong th:text="${frnds.name}">name</strong><br />
+										<textarea  rows="4" class="form-control" name ="message" style="background: #a0a9af;"></textarea> 
+	        					   	</div>
+							        <div class="modal-footer">
+							       		<a href="user"><button type="submit" class="btn btn-info pull-left">Send Message</button></a>
+							        	<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+							        </div>
+						        </form>
+      					   </div>
+      
+	    </div>
+	  </div>
             	</div>
             </div>	
  
@@ -358,7 +382,7 @@
             	<div class = "panel-body">
             		<div class="col-xs-5">
 						<div class="row">
-							<img class="sideBatchPic" src="images/myimage.jpg"/>
+							<img class="sideBatchPic img-rounded" src="images/myimage.jpg"/>
 						</div>		
 					</div>
 					<div class="col-xs-7">
