--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,7 +63,7 @@
 
 </head>
    <body style="background-color:#f6fbff">
-    
+  
       <div class="row no-gutter">
          <nav class="navbar navbar-default" role="navigation" style="background: #45bfbb;">
             <div class="navbar-header" >
@@ -145,6 +145,7 @@
 	
 		<!-- main body -->
       <!-- karma section -->
+   <div class="container-fluid">
 	  <div class="col-sm-7 col-md-7 col-lg-9">
          <div class="row">
          </div>
@@ -186,19 +187,6 @@
                </div>
                <div class="panel-body">
                   <div class="row" style="padding-top: 20px;">
-  <!--            <div th:each="post:${feed}">
-	              <div class="col-xs-12" >
-		              	<div class="col-xs-2 " style = "text-align: center;">
-		                   <img class="imager wallOfFamePost" src="/images/myimage.jpg"/>
-		                </div>
-		                <div class="col-xs-9 ">
-		                	<b th:text="${post.writerId}"></b> <br/>
-		              		<p th:text="${post.content}"></p>
-		              		<i th:text="${post.contentDate}"></i> 
-		                </div><hr> </hr>
-		              	
-	              	</div>
-              </div>		-->
 		              <div  th:each="post:${feed}">
 			            <div class="col-xs-12" >
 			            	<div class="col-xs-2 " style = "text-align: center;">
@@ -408,5 +396,6 @@
 
  	</div>
  	</div>	
+ 	 </div>
    </body>
 </html>
