--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -144,6 +144,13 @@
       </div>
            <div class="container">
       		<!-- <div class="table-responsive"> -->
+      			<div class="row" style="padding-bottom:10px">
+      				<a href = "decline"><button type="button" class="btn btn-primary" >Recieved Messages</button></a>
+    				<a href = "decline"><button type="button" class="btn btn-primary" >Sent Messages</button></a>		
+        			<a href ="user"><button type="button" class="btn btn-info " >Conversations</button></a>
+        				
+      			</div>
+			<div class="row">
 			  <table class="table table-bordered table-striped table-hover">
 			    <thead>
 			      <tr>
@@ -151,7 +158,7 @@
 			        <th>Sender</th>
 			        <th>Message</th>
 			        <th>Time</th>
-			        			        
+			        <th>Action</th>		        
 			      </tr>
 			    </thead>
 			    <tbody>
@@ -160,9 +167,37 @@
 			        <td th:text="${msg.getSendersName()}"></td>
 			        <td th:text="${msg.getMessage()}"></td>
 			        <td th:text="${msg.getMsgDate()}"></td>
+			        <td><button class="btn btn-success" data-toggle="modal" data-target="#messageModal">Reply</button></td>
+			         <div class="modal fade" id="messageModal" role="dialog" data-keyboard="false" data-backdrop="static">
+       					<div class="modal-dialog">
+    
+     						 <!-- Modal content-->
+      						<div class="modal-content">
+      							<div class="modal-header">
+							        <button type="button" class="close" data-dismiss="modal">&times;</button>
+							        <h4 class="modal-title">Message</h4>
+							    </div>
+							    <form th:action="@{/sendMessage/} + ${msg.senderId}" method="post">
+	        						<div class="modal-body">
+	          							<strong th:text="${msg.sendersName}">name</strong><br />
+										<textarea  rows="4" class="form-control" name ="message" style="background: #a0a9af;"></textarea> 
+	        					   	</div>
+							        <div class="modal-footer">
+							       		<a href="user"><button type="submit" class="btn btn-info pull-left">Send Message</button></a>
+							        	<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+							        </div>
+						        </form>
+      					   </div>
+      
+				    </div>
+				  </div>
+			        
 			      </tr>
+			      
 			    </tbody>
+			    
 			  </table>
+			 </div>		
 			<!-- </div> -->
 	  </div>
 
