--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -180,7 +180,7 @@
 					</div>
 					<div class="panel-body">
 						<div class="row" style="padding-top: 20px;">
-							<div th:each="post:${feed}">
+							<div th:each="post:${feeder}">
 								<div class="col-xs-12">
 									<div class="col-xs-2 " style="text-align: center;">
 										<img class="imager wallOfFamePost img-rounded"
